--- a/configure.ac
+++ b/configure.ac
@@ -3541,6 +3541,7 @@ WINE_CONFIG_PROGRAM(ipconfig,,[clean,install])
 WINE_CONFIG_PROGRAM(lodctr,,[install])
 WINE_CONFIG_PROGRAM(mofcomp,,[install])
 WINE_CONFIG_PROGRAM(mshta,,[install])
+WINE_CONFIG_PROGRAM(msidb,,[install,installbin])
 WINE_CONFIG_PROGRAM(msiexec,,[install,installbin,manpage])
 WINE_CONFIG_PROGRAM(net,,[clean,install])
 WINE_CONFIG_PROGRAM(netsh,,[install])
