--- a/configure.ac
+++ b/configure.ac
@@ -2786,6 +2786,7 @@ WINE_CONFIG_DLL(api-ms-win-service-core-l1-1-1)
 WINE_CONFIG_DLL(api-ms-win-service-management-l1-1-0)
 WINE_CONFIG_DLL(api-ms-win-service-winsvc-l1-2-0)
 WINE_CONFIG_DLL(api-ms-win-shcore-obsolete-l1-1-0)
+WINE_CONFIG_DLL(api-ms-win-shcore-thread-l1-1-0)
 WINE_CONFIG_DLL(api-ms-win-shell-shellcom-l1-1-0)
 WINE_CONFIG_DLL(api-ms-win-shell-shellfolders-l1-1-0)
 WINE_CONFIG_DLL(apphelp)
